@@ -2,7 +2,7 @@ __author__ = "Martin Blais <blais@furius.ca>"
 
 import unittest
 
-from beancount.scripts import checkdeps
+from beancount.scripts import deps
 
 
 class TestCheckDeps(unittest.TestCase):
@@ -10,6 +10,6 @@ class TestCheckDeps(unittest.TestCase):
     def test_check_dependencies(self):
         # There isn't much to test here, just run it, it will call all the
         # functions in the module.
-        deps = checkdeps.check_dependencies()
-        self.assertTrue(deps)
-        self.assertTrue(isinstance(deps, list))
+        dependencies = deps.check_dependencies()
+        self.assertTrue(dependencies)
+        self.assertTrue(isinstance(dependencies, list))
