@@ -76,8 +76,9 @@ class TestScriptDoctor(test_utils.TestCase):
             test_utils.run_with_args(doctor.main, ['list_options'])
             test_utils.run_with_args(doctor.main, ['list-options'])
 
-    def test_checkdeps(self):
+    def test_deps(self):
         with test_utils.capture():
+            test_utils.run_with_args(doctor.main, ['deps'])
             test_utils.run_with_args(doctor.main, ['checkdeps'])
 
 
